update - mysticCast display

--- a/src/scss/dialog/mystic-cast-dialog.scss
+++ b/src/scss/dialog/mystic-cast-dialog.scss
@@ -97,4 +97,10 @@
       border-bottom: 1px solid $red;
     }
   }
+
+  .mystic-cast .input {
+    optgroup:not(:has(:first-child)) {
+      display: none;
+    }
+  }
 }
