update - mysticAct display

--- a/src/scss/dialog/mystic-act-dialog.scss
+++ b/src/scss/dialog/mystic-act-dialog.scss
@@ -115,4 +115,10 @@
       border-bottom: 1px solid $red;
     }
   }
+
+  .mystic-act .input {
+    optgroup:not(:has(:first-child)) {
+      display: none;
+    }
+  }
 }
