--- a/src/templates/dialog/mystic-act.hbs
+++ b/src/templates/dialog/mystic-act.hbs
@@ -50,9 +50,21 @@
               title=(localize 'macros.combat.dialog.spell.title')
               inputName='selectedSpell.id'
             }}
-              {{#each this.actor.system.mystic.spells}}
+              <optgroup label="Spell">
+                {{#each_when this.actor.system.mystic.spells "system" "combatType" "value" "none"}}
                 <option {{#if (is "eq" this._id ../this.selectedSpell.id)}}selected{{/if}} value='{{this._id}}'>{{this.name}}</option>
-              {{/each}}
+                {{/each_when}}
+              </optgroup>
+              <optgroup label="Defense">
+                {{#each_when this.actor.system.mystic.spells "system" "combatType" "value" "defense"}}
+                <option {{#if (is "eq" this._id ../this.selectedSpell.id)}}selected{{/if}} value='{{this._id}}'>{{this.name}}</option>
+                {{/each_when}}
+              </optgroup>
+              <optgroup label="Attack">
+                {{#each_when this.actor.system.mystic.spells "system" "combatType" "value" "attack"}}
+                <option {{#if (is "eq" this._id ../this.selectedSpell.id)}}selected{{/if}} value='{{this._id}}'>{{this.name}}</option>
+                {{/each_when}}
+              </optgroup>
             {{/'systems/animabf/templates/common/ui/custom-select.hbs'}}
 
             {{#> 'systems/animabf/templates/common/ui/custom-select.hbs'
