new - automate innatePowers psychicCast Macro

--- a/src/scss/animabf.scss
+++ b/src/scss/animabf.scss
@@ -19,3 +19,4 @@
 @import 'dialog/new-supernatural-shield';
 @import 'dialog/mystic-act-dialog';
 @import 'dialog/mystic-cast-dialog';
+@import 'dialog/psychic-cast-dialog';
