--- a/src/templates/dialog/mystic-cast.hbs
+++ b/src/templates/dialog/mystic-cast.hbs
@@ -11,7 +11,7 @@
   }}
 
   <nav class="abf-tabs sheet-tabs tabs" data-group="primary">
-    <a class="item mysticCast" data-tab="mysticCast">{{localize "anima.ui.tabs.mysticCast"}}</a>
+    <a class="item mysticCast" data-tab="mysticCast">{{localize "anima.ui.tabs.cast"}}</a>
     <a class="item spellMaintenances" data-tab="spellMaintenances">{{localize "anima.ui.tabs.spellMaintenances"}}</a>
   </nav>
 
