--- a/src/scss/actor/parts/psychic.scss
+++ b/src/scss/actor/parts/psychic.scss
@@ -105,7 +105,7 @@
         margin-top: 0.75rem;
 
         display: grid;
-        grid-template-columns: 2fr 3fr 1fr;
+        grid-template-columns: 1fr 2fr;
         grid-column-gap: 0.1rem;
 
         .input-container {
