--- a/src/scss/dialog/psychic-cast-dialog.scss
+++ b/src/scss/dialog/psychic-cast-dialog.scss
@@ -71,12 +71,21 @@
     .innate-power-row {
       margin-top: 0.75rem;
       display: grid;
-      grid-template-columns: 4fr 1fr;
+      grid-template-columns: 3fr 1fr 1fr;
       grid-column-gap: 0.1rem;
 
       .name .input-container {
         width: 100%;
         align-items: start;
+      }
+
+      .effect {
+        grid-column: span 2;
+        margin-top: 0.4rem;
+
+        .input-container {
+          width: 100%;
+        }
       }
     }
 
