update - psychicCast Macro and Combat

--- a/src/templates/actor/parts/psychic/parts/psychic-settings.hbs
+++ b/src/templates/actor/parts/psychic/parts/psychic-settings.hbs
@@ -24,5 +24,13 @@
       inputName="system.psychic.psychicSettings.amplifySustainedPower"
       inputValue=(is 'eq' system.psychic.psychicSettings.amplifySustainedPower true)
     }}
+    {{>
+    "systems/animabf/templates/common/ui/horizontal-titled-input.hbs"
+      class="focus"
+      title=(localize "anima.ui.psychic.psychicSettings.focus.title")
+      inputType="checkbox"
+      inputName="system.psychic.psychicSettings.focus"
+      inputValue=(is 'eq' system.psychic.psychicSettings.focus true)
+    }}
   {{/"systems/animabf/templates/common/ui/group-body.hbs"}}
 {{/"systems/animabf/templates/common/ui/group.hbs"}}
