--- a/src/templates/actor/parts/header/parts/total-armor.hbs
+++ b/src/templates/actor/parts/header/parts/total-armor.hbs
@@ -12,58 +12,86 @@
       {{>
       "systems/animabf/templates/common/ui/vertical-titled-input.hbs"
         class="cut"
-        disabled=true
+        disabled=false
         title=(localize "anima.ui.combat.armors.at.cut.title")
-        inputName="system.combat.armor.at.cut.value"
-        inputValue=system.combat.totalArmor.at.cut.value
+        inputName="system.combat.totalArmor.at.cut.special.value"
+        inputValue=system.combat.totalArmor.at.cut.special.value
+        hasSecondaryInput=true
+        disableSecondaryInput=true
+        secondaryInputName="system.combat.totalArmor.at.cut.final.value"
+        secondaryInputValue=system.combat.totalArmor.at.cut.final.value
       }}
       {{>
       "systems/animabf/templates/common/ui/vertical-titled-input.hbs"
         class="impact"
-        disabled=true
+        disabled=false
         title=(localize "anima.ui.combat.armors.at.impact.title")
-        inputName="system.combat.armor.at.impact.value"
-        inputValue=system.combat.totalArmor.at.impact.value
+        inputName="system.combat.totalArmor.at.impact.special.value"
+        inputValue=system.combat.totalArmor.at.impact.special.value
+        hasSecondaryInput=true
+        disableSecondaryInput=true
+        secondaryInputName="system.combat.totalArmor.at.impact.final.value"
+        secondaryInputValue=system.combat.totalArmor.at.impact.final.value
       }}
       {{>
       "systems/animabf/templates/common/ui/vertical-titled-input.hbs"
         class="thrust"
-        disabled=true
+        disabled=false
         title=(localize "anima.ui.combat.armors.at.thrust.title")
-        inputName="system.combat.armor.at.thrust.value"
-        inputValue=system.combat.totalArmor.at.thrust.value
+        inputName="system.combat.totalArmor.at.thrust.special.value"
+        inputValue=system.combat.totalArmor.at.thrust.special.value
+        hasSecondaryInput=true
+        disableSecondaryInput=true
+        secondaryInputName="system.combat.totalArmor.at.thrust.final.value"
+        secondaryInputValue=system.combat.totalArmor.at.thrust.final.value
       }}
       {{>
       "systems/animabf/templates/common/ui/vertical-titled-input.hbs"
         class="heat"
-        disabled=true
+        disabled=false
         title=(localize "anima.ui.combat.armors.at.heat.title")
-        inputName="system.combat.armor.at.heat.value"
-        inputValue=system.combat.totalArmor.at.heat.value
+        inputName="system.combat.totalArmor.at.heat.special.value"
+        inputValue=system.combat.totalArmor.at.heat.special.value
+        hasSecondaryInput=true
+        disableSecondaryInput=true
+        secondaryInputName="system.combat.totalArmor.at.heat.final.value"
+        secondaryInputValue=system.combat.totalArmor.at.heat.final.value
       }}
       {{>
       "systems/animabf/templates/common/ui/vertical-titled-input.hbs"
         class="electric"
-        disabled=true
+        disabled=false
         title=(localize "anima.ui.combat.armors.at.electricity.title")
-        inputName="system.combat.armor.at.electricity.value"
-        inputValue=system.combat.totalArmor.at.electricity.value
+        inputName="system.combat.totalArmor.at.electricity.special.value"
+        inputValue=system.combat.totalArmor.at.electricity.special.value
+        hasSecondaryInput=true
+        disableSecondaryInput=true
+        secondaryInputName="system.combat.totalArmor.at.electricity.final.value"
+        secondaryInputValue=system.combat.totalArmor.at.electricity.final.value
       }}
       {{>
       "systems/animabf/templates/common/ui/vertical-titled-input.hbs"
         class="cold"
-        disabled=true
+        disabled=false
         title=(localize "anima.ui.combat.armors.at.cold.title")
-        inputName="system.combat.armor.at.cold.value"
-        inputValue=system.combat.totalArmor.at.cold.value
+        inputName="system.combat.totalArmor.at.cold.special.value"
+        inputValue=system.combat.totalArmor.at.cold.special.value
+        hasSecondaryInput=true
+        disableSecondaryInput=true
+        secondaryInputName="system.combat.totalArmor.at.cold.final.value"
+        secondaryInputValue=system.combat.totalArmor.at.cold.final.value
       }}
       {{>
       "systems/animabf/templates/common/ui/vertical-titled-input.hbs"
         class="energy"
-        disabled=true
+        disabled=false
         title=(localize "anima.ui.combat.armors.at.energy.title")
-        inputName="system.combat.armor.at.energy.value"
-        inputValue=system.combat.totalArmor.at.energy.value
+        inputName="system.combat.totalArmor.at.energy.special.value"
+        inputValue=system.combat.totalArmor.at.energy.special.value
+        hasSecondaryInput=true
+        disableSecondaryInput=true
+        secondaryInputName="system.combat.totalArmor.at.energy.final.value"
+        secondaryInputValue=system.combat.totalArmor.at.energy.final.value
       }}
     </div>
   {{/"systems/animabf/templates/common/ui/group-body.hbs"}}
