--- a/src/templates/actor/parts/settings/parts/advancedCharacteristics.hbs
+++ b/src/templates/actor/parts/settings/parts/advancedCharacteristics.hbs
@@ -52,8 +52,8 @@
     "systems/animabf/templates/common/ui/horizontal-titled-input.hbs"
       class="damage-reduction"
       title=(localize "anima.ui.settings.advancedCharacteristics.damageReduction.title")
-      inputName="system.general.settings.damageReduction.value"
-      inputValue=system.general.settings.damageReduction.value
+      inputName="system.combat.damageReduction.value"
+      inputValue=system.combat.damageReduction.value
     }}
   {{/"systems/animabf/templates/common/ui/group-body.hbs"}}
 {{/"systems/animabf/templates/common/ui/group.hbs"}}
