--- a/src/templates/actor/parts/header/parts/primary-characteristics.hbs
+++ b/src/templates/actor/parts/header/parts/primary-characteristics.hbs
@@ -8,10 +8,10 @@
       {{>
         "systems/animabf/templates/common/ui/horizontal-titled-input.hbs"
         class="characteristic"
-        title=(localize (concat 'anima.ui.characteristics.' key))
+        title=(localize (concat 'anima.ui.characteristics.' key '.title'))
         rollable=true
         rollableDice='1d10ControlRoll'
-        rollableMessage=(localize (concat 'anima.ui.characteristics.' key))
+        rollableMessage=(localize (concat 'anima.ui.characteristics.' key '.title'))
         inputName=(concat "system.characteristics.primaries." key ".value")
         inputValue=char.value
         hasSecondaryInput=true
